correction conflit z-index cartes/dropdown + forçage fullscreen + video muted si musique

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21370,7 +21370,6 @@ body .container-fluid .col-10, body .container-sm .col-10, body .container-md .c
   border: 1px solid #f7bf40;
   transition: 0.7s;
   filter: drop-shadow(0 0 3px #f7bf40);
-  font-size: 67%;
   width: 215px;
 }
 #topWrapper .backTop .btnAfficher:hover {
@@ -21402,7 +21401,7 @@ body .container-fluid .col-10, body .container-sm .col-10, body .container-md .c
   filter: drop-shadow(0 0 5px red);
 }
 #topWrapper .backTop .musics-list {
-  background: linear-gradient(180deg, rgba(19, 19, 19, 0.8), rgba(214, 195, 85, 0.1568627451) 100%);
+  background: linear-gradient(180deg, #131313, rgba(95, 87, 39, 0.7176470588) 100%);
   box-shadow: 0 0 5px #f7bf40;
   inset: 22px auto auto 0px !important;
 }
