--- a/src/sass/modules/_top.sass
+++ b/src/sass/modules/_top.sass
@@ -16,7 +16,6 @@
             border: 1px solid $yellowAOC
             transition: 0.7s
             filter: drop-shadow(0 0 3px $yellowAOC)
-            font-size: 67%
             width: 215px
             &:hover
                 background-color: $bgAOC
@@ -41,9 +40,10 @@
                     color: $yellowAOC
                     filter: drop-shadow(0 0 5px red)
         .musics-list
-            background: linear-gradient(180deg, #131313cc, $bgAOC 100%)
+            background: linear-gradient(180deg, #131313, #5f5727b7 100%)
             box-shadow: 0 0 5px $yellowAOC
             inset: 22px auto auto 0px!important
+            
         .dropdown-toggle
             padding: 3px 10px
             background-color: transparent
